Select styling changes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <td>
                 <div class="labels">
                     <label>
-                        <select onclick="checkboxSelect('preferences')" id="preferences">
-                            <option style="display:none">Preferences</option>
-                        </select>
+                        <button onclick="checkboxSelect('preferences')" id="preferences" class="select-button">
+                            Preferences &#x25BC;
+                        </button>
                     </label>
                     <div id="preference-checkbox" class="checkbox-select">
                         <input type="checkbox" id="vegetarian" value="Vegetarian" class="preference-checkboxes">
@@ -41,9 +41,9 @@
             <td>
                 <div class="labels">
                     <label>
-                        <select onclick="checkboxSelect('categories')" id="categories">
-                            <option style="display:none">Categories</option>
-                        </select>
+                        <button onclick="checkboxSelect('categories')" id="categories" class="select-button">
+                            Categories &#x25BC;
+                        </button>
                     </label>
                     <div id="category-checkbox" class="checkbox-select">
                         <input type="checkbox" id="fruits" value="Fruits" class="category-checkboxes">
