Font size changes

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     <input type="text" id="search" class="search" name="search" placeholder="Search products..." onInput="displayProducts()">
                 </label>
             </td>
-            <td>
+            <td class="standard-font">
                 Filter:
             </td>
 
             <td>
                 <div class="labels">
                     <label>
-                        <button onclick="checkboxSelect('preferences')" id="preferences" class="select-button">
+                        <button onclick="checkboxSelect('preferences')" id="preferences" class="standard-font">
                             Preferences &#x25BC;
                         </button>
                     </label>
@@ -41,7 +41,7 @@
             <td>
                 <div class="labels">
                     <label>
-                        <button onclick="checkboxSelect('categories')" id="categories" class="select-button">
+                        <button onclick="checkboxSelect('categories')" id="categories" class="standard-font">
                             Categories &#x25BC;
                         </button>
                     </label>
