--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <td>
                 <div class="labels">
                     <label>
-                        <button onclick="checkboxSelect('preferences')" id="preferences" class="standard-font">
+                        <button onclick="checkboxSelect('preferences')" id="preferences" class="select-button">
                             Preferences &#x25BC;
                         </button>
                     </label>
@@ -41,7 +41,7 @@
             <td>
                 <div class="labels">
                     <label>
-                        <button onclick="checkboxSelect('categories')" id="categories" class="standard-font">
+                        <button onclick="checkboxSelect('categories')" id="categories" class="select-button">
                             Categories &#x25BC;
                         </button>
                     </label>
