Images and prices

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             </td>
             <td>
                 <label>
-                    <input type="text" id="search" class="search" name="search" placeholder="Search products..." onInput="displayProducts()">
+                    <input type="text" id="search" class="search" name="search" placeholder="Search products..."
+                           onInput="displayProducts()">
                 </label>
             </td>
             <td class="standard-font">
@@ -64,7 +65,10 @@
         </tr>
     </table>
 </div>
-<ul id="product-list"></ul>
+<div class="middle">
+    <table id="product-list"></table>
+</div>
+<footer class="bottom">Website designed by Chris Vettese.</footer>
 <script src="scripts/groceries.js"></script>
 <script src="scripts/productFilters.js"></script>
 </body>
